--- a/index.css
+++ b/index.css
@@ -34,8 +34,8 @@ body {
 
 .toy-avatar {
   justify-self: center;
-  height: 12rem;
-  width: auto;
+  height: auto;
+  width: 12rem;
 }
 
 button {
